--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
     "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
@@ -28,6 +29,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0"
+    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
