--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.48.1",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2"
   }
