--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@prisma/client": "^6.6.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.48.1",
