--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -34,6 +34,7 @@
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.48.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2"
   }
