--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "@tailwindcss/vite": "^4.1.3",
+    "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.3",
+    "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
