--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -35,6 +35,7 @@
     "bullmq": "^5.48.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "express-session": "^1.18.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2"
   }
