--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -33,6 +33,7 @@
     "@langchain/community": "^0.3.43",
     "@langchain/core": "^0.3.56",
     "@langchain/openai": "^0.5.10",
+    "@langchain/textsplitters": "^0.1.0",
     "@prisma/client": "^6.6.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.48.1",
@@ -40,6 +41,7 @@
     "cors": "^2.8.5",
     "express-session": "^1.18.1",
     "ioredis": "^5.6.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pdf-parse": "^1.1.1"
   }
 }
