--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -42,6 +42,7 @@
     "express-session": "^1.18.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.101.0",
     "pdf-parse": "^1.1.1"
   }
 }
