--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.6.0",
     "@tailwindcss/vite": "^4.1.3",
     "formik": "^2.4.6",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
