--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -49,6 +49,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.101.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "pgvector": "^0.2.1"
   }
 }
