mapping out task and future feature

--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -50,6 +50,7 @@
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.101.0",
     "pdf-parse": "^1.1.1",
-    "pgvector": "^0.2.1"
+    "pgvector": "^0.2.1",
+    "socket.io": "^4.8.1"
   }
 }
