--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/s3-request-presigner": "^3.895.0",
     "@google/genai": "^1.0.1",
     "@langchain/community": "^0.3.44",
     "@langchain/core": "^0.3.56",
