--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -26,10 +26,10 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.14.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
@@ -57,6 +57,7 @@
     "bullmq": "^5.48.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "express": "^5.1.0",
     "express-session": "^1.18.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
