--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -17,7 +17,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "db:deploy": "npx prisma migrate deploy && npx prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -33,7 +34,6 @@
     "@types/node": "^22.14.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
-    "express": "^5.1.0",
     "install": "^0.13.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
@@ -64,6 +64,7 @@
     "openai": "^4.101.0",
     "pdf-parse": "^1.1.1",
     "pgvector": "^0.2.1",
+    "prisma": "^6.18.0",
     "socket.io": "^4.8.1"
   }
 }
