--- a/backend/ts-node-express/docker-compose.yml
+++ b/backend/ts-node-express/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   postgres:
     image: ankane/pgvector:latest
@@ -36,7 +35,6 @@ services:
       timeout: 5s
       retries: 5
 
-  # Your TypeScript Application
   app:
     build:
       context: .
@@ -51,7 +49,12 @@ services:
       - REDIS_URL=redis://redis:6379
       - REDIS_HOST=redis
       - SESSION_SECRET=${SESSION_SECRET}
-      - GEMINI=${GEMINI}
+      - GEMINI_KEY=${GEMINI_KEY}
+      - JWT_SECRET=${JWT_SECRET}
+      - BUCKET_REGION=${BUCKET_REGION}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
+      - BUCKET_NAME=${BUCKET_NAME}
     depends_on:
       postgres:
         condition: service_healthy
@@ -66,25 +69,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-
-  prisma-studio:
-    image: node:lts-alpine3.17
-    container_name: prisma_studio
-    working_dir: /usr/src/app
-    volumes:
-      - .:/usr/src/app
-    command: sh -c "npm install prisma && npx prisma studio --port 5555 --browser none"
-    ports:
-      - "5555:5555"
-    environment:
-      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-password}@postgres:5432/${DB_NAME:-myapp}
-    networks:
-      - app-network
-    depends_on:
-      postgres:
-        condition: service_healthy
-      app:
-        condition: service_started
 
 volumes:
   postgres_data:
