--- a/backend/ts-node-express/docker-compose.yml
+++ b/backend/ts-node-express/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       redis:
         condition: service_healthy
     volumes:
-      - ./uploads:/app/uploads
+      - .:/usr/src/app
     networks:
       - app-network
     healthcheck:
