--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -65,6 +65,7 @@
     "openai": "^4.101.0",
     "pdf-parse": "^1.1.1",
     "pgvector": "^0.2.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "yup": "^1.7.1"
   }
 }
