--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -5,7 +5,7 @@
   "exports": "./index.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/server.ts",
+    "dev": "'tsx' src/server.ts",
     "build": "tsc",
     "lint": "eslint 'src/**/*.ts'",
     "start": "node dist/server.js",
@@ -26,6 +26,7 @@
   "description": "",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.1",
@@ -57,9 +58,9 @@
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.48.1",
     "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "express-session": "^1.18.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.101.0",
