--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -40,7 +40,7 @@
     "nodemon": "^3.1.10",
     "npm": "^11.3.0",
     "prettier": "^3.5.3",
-    "prisma": "^6.18.0",
+    "prisma": "^6.19.0",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
@@ -50,11 +50,10 @@
     "@aws-sdk/client-s3": "^3.787.0",
     "@aws-sdk/s3-request-presigner": "^3.895.0",
     "@google/genai": "^1.0.1",
-    "@langchain/community": "^0.3.44",
-    "@langchain/core": "^0.3.56",
-    "@langchain/openai": "^0.5.10",
-    "@langchain/textsplitters": "^0.1.0",
-    "@prisma/client": "^6.18.0",
+    "@langchain/community": "^1.0.0",
+    "@langchain/core": "^1.0.3",
+    "@langchain/textsplitters": "^1.0.0",
+    "@prisma/client": "^6.19.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.48.1",
     "cookie-parser": "^1.4.7",
@@ -63,6 +62,7 @@
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^1.0.3",
     "openai": "^4.101.0",
     "pdf-parse": "^1.1.1",
     "pgvector": "^0.2.1",
