--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
+    "tesseract.js": "^6.0.1",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
