--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -52,6 +52,7 @@
     "@google/genai": "^1.0.1",
     "@langchain/community": "^1.0.0",
     "@langchain/core": "^1.0.3",
+    "@langchain/google-genai": "^1.0.0",
     "@langchain/textsplitters": "^1.0.0",
     "@prisma/client": "^6.19.0",
     "bcryptjs": "^3.0.2",
@@ -67,6 +68,7 @@
     "pdf-parse": "^1.1.1",
     "pgvector": "^0.2.1",
     "socket.io": "^4.8.1",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zod": "^3.25.76"
   }
 }
