--- a/backend/ts-node-express/docker-compose.yml
+++ b/backend/ts-node-express/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-myapp}"]
+      test: ["CMD-SHELL", "pg_isready -d ${DB_NAME}"]
       interval: 10s
       timeout: 5s
       retries: 5
