--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -68,6 +68,7 @@
     "pdf-parse": "^1.1.1",
     "pgvector": "^0.2.1",
     "socket.io": "^4.8.1",
+    "tesseract.js": "^6.0.1",
     "yup": "^1.7.1",
     "zod": "^3.25.76"
   }
