--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -32,6 +32,7 @@
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.14.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
@@ -64,6 +65,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^1.0.3",
+    "multer": "^2.0.2",
     "openai": "^4.101.0",
     "pdf-parse": "^1.1.1",
     "pgvector": "^0.2.1",
