--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -67,6 +67,7 @@
     "langchain": "^1.0.3",
     "multer": "^2.0.2",
     "openai": "^4.101.0",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.2.0",
     "pgvector": "^0.2.1",
