--- a/backend/ts-node-express/package.json
+++ b/backend/ts-node-express/package.json
@@ -56,12 +56,14 @@
     "@langchain/google-genai": "^1.0.0",
     "@langchain/textsplitters": "^1.0.0",
     "@prisma/client": "^6.19.0",
+    "@xenova/transformers": "^2.17.2",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.48.1",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "groq-sdk": "^0.37.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^1.0.3",
